--- a/VCarve Pro V11.0/EasyTools/EasyCabinetMaker/Ini/EasyCabinetMaterials.ini
+++ b/VCarve Pro V11.0/EasyTools/EasyCabinetMaker/Ini/EasyCabinetMaterials.ini
@@ -15,24 +15,25 @@
 # Easy Cabinet Material List
 # Dec 2021
 # ===================================================
-[Faceframe]
+[Lumber]
 Count=6
-Faceframe1=Cedar
-Faceframe2=Maple
-Faceframe3=Oak
-Faceframe4=Pine
-Faceframe5=Poplar
-Faceframe6=Walnut
-[Plywood]
+Lumber1=Cedar
+Lumber2=Maple
+Lumber3=Oak
+Lumber4=Pine
+Lumber5=Poplar
+Lumber6=Walnut
+
+[SheetGoods]
 Count=7
-Plywood1=Melamine
-Plywood2=Birch ply
-Plywood3=Oak ply
-Plywood4=Maple ply
-Plywood5=Walnut ply
-Plywood6=Poplar ply
-Plywood7=Piano Ply
-[Finsh]
+SheetGood1=Melamine
+SheetGood2=Birch ply
+SheetGood3=Oak ply
+SheetGood4=Maple ply
+SheetGood5=Walnut ply
+SheetGood6=Poplar ply
+
+[Finshing]
 Count=3
 Finsh1=Paint
 Finsh2=Prime Only
